resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-15.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
class resym_test::ClassWithRefsAndStaticsTest {
  private: int32_t& iref;
  private: const int32_t& ciref;
  private: int32_t* iptr;
  private: const int32_t* ciptr;
  private: bool& bref;
  private: const bool& cbref;
  private: bool* bptr;
  private: const bool* cbptr;
  private: static int32_t sint;
  private: static bool sbool;
  
  public: ClassWithRefsAndStaticsTest();
  public: void __autoclassinit2(uint64_t);
};
