resym_core/tests/snapshots/type_reconstruction__test_type_reconstruction_no_comments-19.snap
---
source: resym_core/tests/type_reconstruction.rs
expression: reconstructed_type
---
struct resym_test::BitFieldsTest5 {
  union {
    uint16_t b1 : 1;
    uint16_t b2 : 5;
    uint16_t b3 : 10;
  };
};
